--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ cache:
   directories:
     - node_modules
 before_install:
-  - mysql -e 'CREATE DATABASE voyager_db;'
+  - mysql -e 'CREATE DATABASE test_db;'
